[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/WalkToPoints.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/FadeInOutLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/sign/sign.gd" type="Script" id=3]
[ext_resource path="res://environment/sign/textures/sign.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 8 )

[node name="Sign" type="Area2D"]
script = ExtResource( 3 )

[node name="ReadableRange" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 4 )

[node name="OutlineTween" type="Tween" parent="Sprite"]

[node name="FadeInOutLabel" parent="." instance=ExtResource( 2 )]
text = "Read"

[node name="WalkToPoints" parent="." instance=ExtResource( 1 )]
